# resource_aware_decentralized_sim

./: README.md
m-explore/explore/include/explore/: explore.h  frontier_explore.h
m-explore/explore/launch/: multi_explore.launch
m-explore/explore/src/: explore1.cpp  explore_original.cpp  frontier_explore.cpp
multirobot_laserscan_filter/: CHANGELOG.rst  CMakeLists.txt  laser_filters_plugins.xml  nodelets.xml  package.xml
multirobot_laserscan_filter/cfg/: IntensityFilter.cfg  PolygonFilter.cfg  RangeFilter.cfg  ScanShadowsFilter.cfg  SectorFilter.cfg  SpeckleFilter.cfg
multirobot_laserscan_filter/examples/: box_filter.yaml  box_filter_example.launch  footprint_filter_example.launch  footprint_filter_example.yaml  intensity_filter_example.launch  intensity_filter_example.yaml  mask_filter_example.launch  mask_filter_example.yaml  median_filter_5_example.launch  median_filter_5_example.yaml  multiple_filters_example.launch  multiple_filters_example.yaml  multirobot_scan_filter.launch  pass_through_example.launch  point_cloud_footprint_filter_example.yaml  polygon_filter.yaml  polygon_filter_example.launch  range_filter.yaml  range_filter_example.launch  sector_filter.yaml  sector_filter_example.launch  shadow_filter_example.launch  shadow_filter_example.yaml  speckle_filter_example.launch  speckle_filter_example.yaml  speckle_filter_multi.launch
multirobot_laserscan_filter/include/multirobot_laserscan_filter/: angular_bounds_filter.h  angular_bounds_filter_in_place.h  array_filter.h  box_filter.h  footprint_filter.h  intensity_filter.h  interpolation_filter.h  median_filter.h  multirobot_pos_filter.h  point_cloud_footprint_filter.h  range_filter.h  scan_blob_filter.h  scan_mask_filter.h  scan_shadow_detector.h  scan_shadows_filter.h
multirobot_laserscan_filter/src/: laser_scan_filters.cpp  multirobot_pos_filter.cpp  multirobot_position_filter.cpp  multirobot_position_filter_v1.cpp  pointcloud_filters.cpp  scan_to_scan_filter_chain.cpp  test.cpp
multirobot_laserscan_filter/test/: fake_laser.py  test_polygon_filter  test_polygon_filter.launch  test_polygon_filter.yaml  test_scan_filter_chain.launch  test_scan_filter_chain.yaml  test_shadow_detector.cpp  test_speckle_filter  test_speckle_filter.launch  test_speckle_filter_distance.yaml  test_speckle_filter_euclidean.yaml
multirobot_merge_graphmap/: CMakeLists.txt  package.xml
navigation/base_local_planner/src/: goal_functions.cpp
open_karto/: Authors  CMakeLists.txt  package.xml
open_karto/include/open_karto/: Karto.h  Macros.h  Mapper.h  Math.h  Types.h
open_karto/src/: Karto.cpp  Mapper.cpp
openslam_falkolib/include/falkolib/Common/: GeomUtils.h  HoughSpectrum.h  Point.h
openslam_falkolib/test/: testKeypointFalko.cpp
resource_aware_coordination/: CMakeLists.txt  package.xml
resource_aware_coordination/data/: 500_ms_delay.txt  50_ms_delay.txt  no_time_delay.txt  tb3_0_graph1.txt  tb3_0_graph2.txt
resource_aware_coordination/include/explore/: explore.h  frontier_explore.h
resource_aware_coordination/include/resource_aware_coordination/: turtlebot3_communicator.hpp  turtlebot3_communicator_v0.hpp  utilfunctions.hpp
resource_aware_coordination/launch/: exploration_frontier_points.launch  multi_local_comm_nodes.launch
resource_aware_coordination/scripts/: comm_time_distribution.py  visualize_gtsam_graphs_1.py  visualize_gtsam_graphs_2.py
resource_aware_coordination/src/: costmap_client.cpp  explore.cpp  frontier_explore.cpp  frontier_search.cpp  local_OGM_expansion.cpp  localmap_expansion.cpp  localmap_expansion1.cpp  localmap_expansion2.cpp  rag_base_station.cpp  rag_base_station_backup.cpp  tb3_0_local_comm_node.cpp  tb3_0_local_comm_node_original.cpp  tb3_1_local_comm_node.cpp  tb3_2_local_comm_node.cpp  turtlebot3_communicator.cpp  turtlebot3_communicator_v0.cpp  utilfunctions.cpp
slam_karto_gtsam_landmark/: CMakeLists.txt  LICENSE  README.md  package.xml
slam_karto_gtsam_landmark/include/slam_karto_gtsam_landmark/: GTSAMSolver.h
slam_karto_gtsam_landmark/launch/: replay_rosbag.launch
slam_karto_gtsam_landmark/msg/: OptimizationOutput.msg
slam_karto_gtsam_landmark/src/: GTSAMSolver.cpp  laserscan_feature_detection.cpp  laserscan_feature_detection_v0.cpp  slam_karto_gtsam_landmark.cpp
turtlebot3/turtlebot3_navigation/launch/: move_base.launch  move_base_cartographer.launch  move_base_cartographer_ns.launch  move_base_single.launch  multi_move_base.launch  multi_movebase_cartographer.launch
turtlebot3/turtlebot3_navigation/param/: base_local_planner_params.yaml  costmap_common_params_burger.yaml  dwa_local_planner_params_burger.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
turtlebot3/turtlebot3_slam/config/: gmapping_params.yaml  turtlebot3_gazebo_ns0.lua  turtlebot3_lds_2d.lua  turtlebot3_lds_2d_gazebo.lua
turtlebot3/turtlebot3_slam/launch/: multi_karto_gtsam_posfilter.launch  multi_karto_posfilter.launch  multi_posfilter.launch  turtlebot3_cartographer.launch  turtlebot3_cartographer_ns.launch  turtlebot3_karto.launch  turtlebot3_karto_gtsam.launch  turtlebot3_slam.launch
turtlebot3/turtlebot3_slam/rviz/: turtlebot3_gmapping.rviz  turtlebot3_karto.rviz
turtlebot3_simulations/turtlebot3_gazebo/launch/: multi_MAIN_turtlebot3.launch  multi_MAIN_turtlebot3_testzone.launch  multi_map_merge.launch  multi_map_merge_karto.launch  multi_turtlebot3_slam.launch  multi_turtlebot3_slam_posfilter.launch  turtlebot3_house.launch  turtlebot3_house_ns.launch  turtlebot3_world.launch
turtlebot3_simulations/turtlebot3_gazebo/models/test_zone/: model.sdf
turtlebot3_simulations/turtlebot3_gazebo/models/test_zone/meshes/: building_modified.dae  building_modified1.dae
turtlebot3_simulations/turtlebot3_gazebo/rviz/: multi_turtlebot3_slam.rviz  multi_turtlebot3_slam_MB.rviz  multi_turtlebot3_slam_costmaps.rviz  multi_turtlebot3_slam_pathspose_movebase.rviz  multi_turtlebot3_slam_withpaths.rviz  multi_turtlebot3_slam_withpathspose.rviz
turtlebot3_simulations/turtlebot3_gazebo/worlds/: test_zone.sdf  test_zone_updated.sdf
